--- a/inicializador/pom.xml
+++ b/inicializador/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>br.edu.unifei</groupId>
-        <artifactId>barramento-de-servicos-v2</artifactId>
+        <artifactId>barramento-de-servicos</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
