--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.edu.unifei</groupId>
-    <artifactId>barramento-de-servicos-v2</artifactId>
+    <artifactId>barramento-de-servicos</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
