--- a/nucleo/pom.xml
+++ b/nucleo/pom.xml
@@ -1,10 +1,11 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <version>1.1</version>
     <parent>
         <groupId>br.edu.unifei</groupId>
         <artifactId>barramento-de-servicos</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
 
     <artifactId>nucleo</artifactId>
@@ -21,7 +22,7 @@
         <dependency>
             <groupId>br.edu.unifei</groupId>
             <artifactId>utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
