build: ajustar finalName para gerar barramento-de-servicos.jar

--- a/inicializador/pom.xml
+++ b/inicializador/pom.xml
@@ -65,6 +65,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <finalName>barramento-de-servicos</finalName>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <filters>
                                 <filter>
